--- a/app.json
+++ b/app.json
@@ -33,6 +33,9 @@
   },
   "buildpacks": [
     {
+      "url": "heroku/ruby"
+    },
+    {
       "url": "https://github.com/stomita/heroku-buildpack-phantomjs.git"
     }
   ]
